

#add_executable(packed_array packed_array.cpp)
#add_test(packed_array, packed_array)

#add_executable(entity_manager entity_manager.cpp)
#add_test(entity_manager, entity_manager)

#add_executable(perf perf.cpp)

add_executable(bench bench.cpp)

#add_executable(experimental experimental.cpp)




#add_executable(experimental2 experimental2.cpp)
#add_with_sfml(experimental2 experimental2.cpp)

