

#add_executable(packed_array packed_array.cpp)
#add_test(packed_array, packed_array)

#add_executable(entity_manager entity_manager.cpp)
#add_test(entity_manager, entity_manager)

#add_executable(perf perf.cpp)

#add_executable(bench bench.cpp)

#add_executable(entity_group_manager entity_group_manager.cpp)
#add_test(entity_group_manager, entity_group_manager)

add_executable(handle_array handle_array.cpp)
add_test(handle_array, handle_array)
